frontend/src/app/widgets/popup/popup.component.scss
.blocker {
    position: fixed;
    inset: 0;
    opacity: 0;
    top: 100%;
    background-color: #8c006640;
    transition-duration: 0.5s;
    transition-timing-function: ease;
    transition-property: top, opacity;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;

    &.enabled {
        top: 0;
        opacity: 1;
    }

    .popup {
        background-color: white;
        position: absolute;
        width: min(1000px, 90vw);
        margin-top: 50px;
        padding: 1em min(2em, 5%);
        border-radius: 25px;
        box-shadow: 0 0 10px 2px #00000080;

        .header {
            display: flex;
            align-items: center;
            justify-content: flex-end;
            
            .close {
                font-size: 2em;
                cursor: pointer;

                transition: transform 0.2s ease;
                &:hover {
                    transform: scale(1.1);
                }
            }
        }
    }
}

